--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -10,4 +10,4 @@ train:
   test_size: 0.2
   random_state: 42
 output:
-  model_path: "models/RandomForest_model.joblib"
+  model_path: "models/random_forest_model.pkl"
