--- a/ML_ANN/pyproject.toml
+++ b/ML_ANN/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "numpy>=2.2.6",
     "onnxruntime>=1.23.2",
     "opencv-python>=4.12.0.88",
+    "opencv-python-headless>=4.12.0.88",
     "pillow>=12.0.0",
     "pydantic>=2",
     "pyzmq>=27.1.0",
